# pycora

./: LICENSE  README.md  __init__.py  pyproject.toml
examples/: ks_straight_example.py
linear_sys/: __init__.py  _interval_matrix.py  _taylor.py  linear_sys.py
models/: __init__.py  kin_single_track.py
nonlinear_sys/: __init__.py  linearize.py  nonlinear_sys.py
tests/: test_ks_reach.py  test_linear_reach.py  test_zonotope.py
validation/: README.md  compare_cora_pycora.py  cora_ks_reach.m  pycora_ks_reach.py
zonotope/: __init__.py  reduce.py  zonotope.py
